// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<thead
  className="cf-1gxgayq"
>
  TableHead
</thead>
`;

exports[`should render extra class name 1`] = `
<thead
  className="extra"
>
  TableHead
</thead>
`;
